infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: registry.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: docker-registry
            port:
              number: 5000
  - host: hello-kube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-hello-kube
            port:
              number: 80
